<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:adboost="http://www.adience.com/adboost/schema"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".DynamicActivity" >

    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="@string/dynamic_orientation" >

        <RadioGroup
            android:id="@+id/interstitialChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="AUTOMATIC"
                android:text="@string/load_interstitial_auto" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="OVERLAY"
                android:text="@string/load_interstitial_overlay" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="APPS"
                android:text="@string/load_interstitial_apps" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="LANDING_PAGE"
                android:text="@string/load_interstitial_landingpage" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="FULL_PAGE"
                android:text="@string/load_interstitial_fullpage" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loadInterstitial"
                android:tag="VIDEO"
                android:text="@string/load_interstitial_video" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/show_interstitial_margin"
            android:orientation="@string/dynamic_progress_orientation" >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/showInterstitialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showInterstitial"
                android:text="@string/show_interstitial" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <com.adience.adboost.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        adboost:adSize="320x50" />

</LinearLayout>